# fusion-producer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
contrib/: config.yaml  native.service  service
data/: config.yaml  ton-global.config.json
scripts/: setup.sh  update.sh
src/: config.rs  lib.rs  main.rs
src/blocks_handler/: mod.rs
src/data_scanner/: archives_scanner.rs  mod.rs  network_scanner.rs  s3_scanner.rs  test_scanner.rs
src/filter/: config.rs  mod.rs  parser.rs  utils.rs
src/producer/: http2.rs  mod.rs
src/serializer/: data_producer.proto  mod.rs  protobuf.rs  venom_data_producer.proto
src/types/: mod.rs  utils.rs
test/: request-test-blocks.sh
test/abi/: TokenWallet.abi.json
test/blocks/: blocks.json
